add standard compliant site icon

--- a/layouts/main.html
+++ b/layouts/main.html
@@ -11,6 +11,7 @@ $layout_dateline ||= begin
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="generator" content="nanoc"/>
     <link rel="shortcut icon" href="<%= pathof '/favicon/' %>" type="image/x-icon" />
+    <link rel="icon" href="<%= pathof '/icon/' %>" type="image/png" />
     <link media="all" rel="stylesheet" type="text/css" href="<%= pathof '/assets/style/fosdem/' %>" />
     <link href="<%= pathof '/atom/' %>" type="application/atom+xml" rel="alternate" title="<%= conference()[:title] %> ATOM Feed"/>
     <link href="<%= pathof '/rss/' %>" type="application/rss+xml" rel="alternate" title="<%= conference()[:title] %> RSS Feed"/>
