a few fixes + rewrite the news stuff completely

--- a/content/assets/style/parts/020_local.css
+++ b/content/assets/style/parts/020_local.css
@@ -378,6 +378,29 @@ ul.side-box {
   text-align: left;
 }
 
+#all-news li.news-item {
+  border-bottom: 1px solid #ddd;
+  margin-bottom: 2em;
+}
+#all-news .date {
+  font-family: Lato, "DejaVu Sans", Arial, Helvetica, sans-serif;
+  font-size: 125%;
+  font-weight: bold;
+  padding: 0;
+  margin-top: 0.3em;
+  width: 6.5em;
+  text-align: left;
+  margin-left: -6.5em;
+  float: left;
+  line-height: 1.6;
+}
+#all-news .date-separator {
+  color: #ddd;
+}
+#all-news h2 {
+  margin-top: 0;
+}
+
 .stands-table-index {
   font-family: monospace;
   width: 3em;
