add license text block in footer + metadata

--- a/content/assets/style/parts/020_local.css
+++ b/content/assets/style/parts/020_local.css
@@ -427,3 +427,11 @@ ul.side-box {
   content: ".\00A0";
 }
 
+.license-info {
+    margin-top: 26px;
+	overflow:hidden;
+	text-shadow:0 1px 0 #fff;
+	font-size:12px;
+	padding:0 0 24px 122px;
+	background:url(cc-by-sa-20-be.png) no-repeat 9px 10%;
+}
