--- a/content/assets/style/sprite.erb
+++ b/content/assets/style/sprite.erb
@@ -18,6 +18,9 @@ end
 [
   '/assets/style/fosdem-logo/',
   '/assets/style/ulb/',
+  '/assets/style/cc-by-sa-20-be/',
+  '/assets/style/bg-company-info/',
+  '/assets/style/logo-compact/',
 ].map(&$to_item).each do |i|
   logos << i
 end
