--- a/layouts/main.html
+++ b/layouts/main.html
@@ -145,10 +145,12 @@ $layout_dateline ||= begin
         <% end %>
         </div> <!-- .panel-block -->
         <div class="company-info">
+          <div class="company-info-logo"></div>
           <strong class="logo-small"><a href="<%= pathof '/schedule/' %>"><%= conference()[:acronym] %></a></strong>
           <p>Brussels <span>/</span> <strong><%= $layout_dateline %></strong></p>
         </div>
         <div class="license-info">
+          <div class="license-info-logo"></div>
           This work is licensed under the Creative Commons Attribution-ShareAlike 2.0
           Belgium License.<br/>
           To view a copy of this license, visit
