--- a/content/assets/style/parts/099_sprite.css
+++ b/content/assets/style/parts/099_sprite.css
@@ -4,6 +4,9 @@
   extra = {
     '.logo-small' => '/assets/style/fosdem-logo/',
     '.logo-ulb-big' => '/assets/style/ulb/',
+    '.license-info-logo' => '/assets/style/cc-by-sa-20-be/',
+    '.company-info-logo' => '/assets/style/bg-company-info/',
+    '.logo' => '/assets/style/logo-compact/',
   }
 
   # calculate offsets
