--- a/content/assets/style/sprite.erb
+++ b/content/assets/style/sprite.erb
@@ -21,6 +21,8 @@ end
   '/assets/style/cc-by-sa-20-be/',
   '/assets/style/bg-company-info/',
   '/assets/style/logo-compact/',
+  '/assets/style/btn-home-inactive/',
+  '/assets/style/btn-home-active/',
 ].map(&$to_item).each do |i|
   logos << i
 end
