--- a/content/assets/style/parts/099_sprite.css
+++ b/content/assets/style/parts/099_sprite.css
@@ -7,6 +7,8 @@
     '.license-info-logo' => '/assets/style/cc-by-sa-20-be/',
     '.company-info-logo' => '/assets/style/bg-company-info/',
     '.logo' => '/assets/style/logo-compact/',
+    '#nav .home a' => '/assets/style/btn-home-inactive/',
+    '#nav .home.active a' => '/assets/style/btn-home-active/',
   }
 
   # calculate offsets
