--- a/content/assets/style/parts/099_sprite.css
+++ b/content/assets/style/parts/099_sprite.css
@@ -1,15 +1,7 @@
 <%=
 # vim: set ts=2 sw=2 et ai ft=eruby:
 
-  extra = {
-    '.logo-small' => '/assets/style/fosdem-logo/',
-    '.logo-ulb-big' => '/assets/style/ulb/',
-    '.license-info-logo' => '/assets/style/cc-by-sa-20-be/',
-    '.company-info-logo' => '/assets/style/bg-company-info/',
-    '.logo' => '/assets/style/logo-compact/',
-    '#nav .home a' => '/assets/style/btn-home-inactive/',
-    '#nav .home.active a' => '/assets/style/btn-home-active/',
-  }
+  extra = $item_by_id.fetch('/assets/style/sprite/')[:sprites]
 
   # calculate offsets
   logos = begin
