sponsors: add RedHat as a cornerstone sponsor
TODO: figure out how to put them at the top of the sponsors page
and make their logo stand out more in the "sprite" at the top too.

--- a/content/assets/style/parts/010_design.css
+++ b/content/assets/style/parts/010_design.css
@@ -57,6 +57,12 @@ fieldset{
 	display:block;
 	height:100%;
 }
+.logo-redhat{
+	display:block;
+	overflow:hidden;
+	text-indent:-9999px;
+	background:url(sprite.png) no-repeat;
+}
 #nav{
 	float:right;
 	margin:0;
