sort speakers top then down instead of left then right, and use a more compact design, and also use 4 columns instead of 3 (there will soon be a lot more of them

--- a/content/assets/style/parts/020_local.css
+++ b/content/assets/style/parts/020_local.css
@@ -477,3 +477,16 @@ pre.sh {
     padding-left: 0.5em;
 }
 
+.name-index {
+    margin-bottom: 0;
+    line-height: 1;
+}
+.name-index-items {
+    margin-left: 0;
+    list-style-type: none;
+}
+.name-index-items li:before {
+    content: "\00B7\00A0";
+}
+
+}
