cornerstone sponsors on a first row + fix sponsor headings + use regular alphabetic order for sponsor logos on top row + fix separator artefact

--- a/content/assets/style/parts/020_local.css
+++ b/content/assets/style/parts/020_local.css
@@ -74,6 +74,9 @@ div.s-unit {
   padding-bottom: 2em;
   border-bottom: 1px dashed #ccc;
 }
+div.s-unit-last {
+  border-bottom: none;
+}
 div.hotel {
   margin-bottom: 1.5em;
 }
