layout: include subtitles on pages that have them
It would be nice if someone who actually understands how HTML and
CSS work could review this change to make sure it has no nasty
side-effects.

--- a/content/assets/style/parts/020_local.css
+++ b/content/assets/style/parts/020_local.css
@@ -356,9 +356,9 @@ ul.side-box {
   padding-left: 0.5em;
   border-left: 1px dotted #000;
 }
-.schedule-track #main > h1,
-.schedule-event #main > h1,
-.schedule-room  #main > h1 {
+.schedule-track #pagetitles,
+.schedule-event #pagetitles,
+.schedule-room  #pagetitles {
   float: left;
 }
 
