logo: prettify (no more blurry M)
While here, fix our name, and remove unsightly 'no registration necessary'.

--- a/layouts/main.html
+++ b/layouts/main.html
@@ -34,7 +34,7 @@ $layout_dateline ||= begin
   <body<%= @item.identifier =~ %r{^/schedule/([^/]+)/} ?  " class=\"schedule-#{$1}\"" : '' %>> 
     <div id="header">
       <div class="header-holder">
-        <h1 class="logo"><a href="<%= pathof '/' %>"><%= conference()[:acronym] %> Free and open source software developers’ European meeting</a></h1>
+        <h1 class="logo"><a href="<%= pathof '/' %>"><%= conference()[:acronym] %></a></h1>
         <ul id="nav">
           <%= navigation $item_by_id.fetch('/navigation/')[:top] %>
           <% unless item[:no_search] %>
