layouts: we have 'events', not 'sessions'

--- a/layouts/schedule/room.html
+++ b/layouts/schedule/room.html
@@ -154,7 +154,7 @@
 
 
 <% unless item[:events].empty? %>
-<h3>Sessions</h3>
+<h3>Events</h3>
 <table class="table table-striped table-bordered table-condensed">
     <thead>
         <tr>
