--- a/layouts/schedule/speaker.html
+++ b/layouts/schedule/speaker.html
@@ -29,7 +29,7 @@
 <% end %>
 
 <% unless item[:events].empty? %>
-<h3>Sessions</h3>
+<h3>Events</h3>
 <table class="table table-striped table-bordered table-condensed">
     <thead>
         <tr>
