--- a/layouts/main.html
+++ b/layouts/main.html
@@ -70,7 +70,13 @@ $layout_dateline ||= begin
       <div class="visual">
         <div class="visual-shadow">&nbsp;</div>
         <div class="visual-image">
-          <%= img('/assets/style/fosdem-home-visual/', alt: '') %>
+	  <div class="visual-image-wrapper">
+            <%= img('/assets/style/fosdem-home-visual/', alt: '') %>
+            <div class="visual-image-credits">
+              original photo by forresto:
+              <a href="https://www.flickr.com/photos/forresto/">https://www.flickr.com/photos/forresto/</a>
+	    </div>
+          </div>
         </div>
         <div class="visual-content">
           <ul class="visual-panel">
