--- a/layouts/schedule/day.html
+++ b/layouts/schedule/day.html
@@ -32,6 +32,14 @@ xml.table(class: "timetable timetable-head table table-striped table-bordered ta
       end
     end #tr
   end #thead
+  # Produce valid XHTML: can't have a table with a thead without a tbody.
+  # And we need the thead or the style breaks violently.
+  xml.tbody do
+    xml.tr do
+      xml.td(style: "display:none;") do
+      end
+    end
+  end
 end #table
 
 xml.table(class: "timetable table table-striped table-bordered table-condensed") do
