minor edit fixes and some additional instances where free software should be added alongside open source

--- a/layouts/main.html
+++ b/layouts/main.html
@@ -93,6 +93,7 @@ $layout_dateline ||= begin
               'beer' => nil,
               'devrooms' => '/schedule/tracks/',
               'open source' => nil,
+              'free software' => nil,
               '5000+ hackers' => nil,
               'lightning talks' => '/schedule/track/lightning_talks/',
               "#{$eventcount} lectures" => '/schedule/events/',
