Changed licence link to english instead of French

--- a/layouts/main.html
+++ b/layouts/main.html
@@ -164,7 +164,7 @@ $layout_dateline ||= begin
           <div class="license-info-logo"></div>
           This work is licensed under the Creative Commons Attribution 2.0 Belgium License.<br/>
           To view a copy of this license, visit
-          <a class="quiet" rel="license" href="http://creativecommons.org/licenses/by/2.0/be/">http://creativecommons.org/licenses/by/2.0/be/</a><br/>
+          <a class="quiet" rel="license" href="http://creativecommons.org/licenses/by/2.0/be/deed.en">http://creativecommons.org/licenses/by/2.0/be/deed.en</a><br/>
           or send a letter to Creative Commons, 444 Castro Street, Suite 900, Mountain View, California, 94041, USA.
         </div>
       </div>
