licence: spell 'licence' correctly

--- a/layouts/main.html
+++ b/layouts/main.html
@@ -162,8 +162,8 @@ $layout_dateline ||= begin
         </div>
         <div class="license-info">
           <div class="license-info-logo"></div>
-          This work is licensed under the Creative Commons Attribution 2.0 Belgium License.<br/>
-          To view a copy of this license, visit
+          This work is licensed under the Creative Commons Attribution 2.0 Belgium Licence.<br/>
+          To view a copy of this licence, visit
           <a class="quiet" rel="license" href="http://creativecommons.org/licenses/by/2.0/be/deed.en">http://creativecommons.org/licenses/by/2.0/be/deed.en</a><br/>
           or send a letter to Creative Commons, 444 Castro Street, Suite 900, Mountain View, California, 94041, USA.
         </div>
