--- a/content/assets/style/parts/010_design.css
+++ b/content/assets/style/parts/010_design.css
@@ -292,7 +292,7 @@ a.btn-purple:hover {
 .logo-list li{
 	display:inline-block;
 	vertical-align:middle;
-	padding:0 0 20px;
+	padding:20px 0 0;
 }
 *+html .logo-list li{display:inline;}
 .logo-list a{
