--- a/layouts/main.html
+++ b/layouts/main.html
@@ -89,7 +89,7 @@ $layout_dateline ||= begin
                                 end
                               end
               {
-              'beer' => nil,
+              'beer' => '/beerevent/',
               'devrooms' => '/schedule/tracks/',
               'open source' => nil,
               '5000+ hackers' => nil,
