--- a/layouts/fullpage.html
+++ b/layouts/fullpage.html
@@ -4,7 +4,13 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="generator" content="nanoc"/>
-    <link rel="shortcut icon" href="<%= pathof '/favicon/' %>" type="image/x-icon" />
+    <link rel="apple-touch-icon" sizes="120x120" href="<%= pathof '/apple-touch-icon/' %>" />
+    <link rel="icon" type="image/png" href="<%= pathof '/favicon-32x32/' %>" sizes="32x32" />
+    <link rel="icon" type="image/png" href="<%= pathof '/favicon-16x16/' %>" sizes="16x16" />
+    <link rel="manifest" href="<%= pathof '/manifest/' %>" />
+    <link rel="mask-icon" href="<%= pathof '/safari-pinned-tab/' %>" color="#af2c93" />
+    <meta name="msapplication-TileColor" content="#af2c93"/>
+    <meta name="theme-color" content="#ffffff" />
     <link media="all" rel="stylesheet" type="text/css" href="<%= pathof '/assets/style/fosdem/' %>" />
     <link href="<%= pathof '/atom/' %>" type="application/atom+xml" rel="alternate" title="<%= conference()[:title] %> ATOM Feed"/>
     <link href="<%= pathof '/opensearch/' %>" type="application/opensearchdescription+xml" title="<%= conference()[:title] %> Search"/>
