adding beerevent link

--- a/layouts/main.html
+++ b/layouts/main.html
@@ -94,9 +94,9 @@ $layout_dateline ||= begin
                                 end
                               end
               {
-              'beer' => nil,
+              'beer' => '/beerevent/',
               'devrooms' => '/schedule/tracks/',
-              'open source' => nil,
+              'open source' => 'https://en.wikipedia.org/wiki/Open-source_model',
               '8000+ hackers' => nil,
               'lightning talks' => '/schedule/track/lightning_talks/',
               "#{$eventcount} lectures" => '/schedule/events/',
