--- a/layouts/main.html
+++ b/layouts/main.html
@@ -86,7 +86,7 @@ $layout_dateline ||= begin
           <ul class="visual-panel">
             <%
               $eventcount ||= begin
-                                s = events.size - 8 # 8 cert; 1 PGP; off-by-one
+				s = events.select{|e| e[:type] != 'certification' && e[:type] != 'keysigning' && e[:type] != 'bof'}.count + 1
                                 if s > 400
                                   s.to_s
                                 else
