events: use https for flowplayer

--- a/layouts/schedule/event.html
+++ b/layouts/schedule/event.html
@@ -47,8 +47,8 @@
 <div class="video">
   <video preload="none" controls="controls">
     <source src="<%= url %>" type='video/webm; codecs="vp8, vorbis"' />
-    <object type="application/x-shockwave-flash" data="http://releases.flowplayer.org/swf/flowplayer-3.2.15.swf">
-      <param name="movie" value="http://releases.flowplayer.org/swf/flowplayer-3.2.15.swf"/>
+    <object type="application/x-shockwave-flash" data="https://releases.flowplayer.org/swf/flowplayer-3.2.15.swf">
+      <param name="movie" value="https://releases.flowplayer.org/swf/flowplayer-3.2.15.swf"/>
       <param name="allowfullscreen" value="true"/>
       <param name="flashvars" value="config={'clip': {'url': '<%= url %>', 'autoPlay':false, 'autoBuffering':false}}"/>
       <p>Video tag not supported. Download the video <a href="<%= url %>">here</a>.</p>
