WebM/VP9 uses opus, not vorbis, for audio

--- a/layouts/schedule/event.html
+++ b/layouts/schedule/event.html
@@ -46,7 +46,7 @@
 %>
 <div class="video">
   <video preload="none" controls="controls">
-    <source src="<%= url %>" type='video/webm; codecs="vp9, vorbis"' />
+    <source src="<%= url %>" type='video/webm; codecs="vp9, opus"' />
   </video>
 </div>
 <% end %>
