--- a/content/assets/style/parts/010_design.css
+++ b/content/assets/style/parts/010_design.css
@@ -225,6 +225,7 @@ a.btn-purple:hover {
 }
 .info-box .btn-purple{margin:3px 0 0 7px;}
 #main{
+	max-width:968px;
 	margin:0 auto;
 	padding:12px 0 47px 10px;
 }
@@ -462,16 +463,19 @@ a.btn-purple:hover {
 	background:url(bg-title-box-b.gif) repeat-x 0 100%;
 }
 .title-box .frame{
-	width:940px;
+	max-width:940px;
+	display:flex;
+	flex-wrap:wrap;
+	justify-content:space-between;
 	margin:0 auto;
 	overflow:hidden;
 }
 .navbar{
-	float:right;
-	margin:-999px 0;
-	padding:1012px 33px 1011px 19px;
+	display: flex;
+    align-items: center;
+	margin:0;
+	padding:10px;
 	list-style:none;
-	border-left:1px solid #ccc;
 	font-size:16px;
 	line-height:20px;
 	font-weight:bold;
@@ -486,7 +490,10 @@ a.btn-purple:hover {
 	text-decoration:none;
 	color:#333;
 }
-.title-box .text-block{overflow:hidden;}
+.title-box .text-block{
+	overflow:hidden;
+	margin-right:25px;
+}
 .title-box h2{
 	float:left;
 	margin:0 13px 0 0;
@@ -594,6 +601,7 @@ a.btn-purple:hover {
 	color:#5f5f5f;
 }
 .footer-holder{
+	max-width:968px;
 	margin:0 auto;
 	padding:30px 0 67px 10px;
 }
